<resources>
    <string name="app_name">DoINeedIt</string>
    <string name="hint_firstName">Enter first name</string>
    <string name="hint_surname">Enter surname</string>
    <string name="hint_email">Enter email address</string>
    <string name="hint_password">Enter password</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="title">Do I Need It</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="add">Add</string>
    <string name="title_activity_test">Test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>