<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <!--TextView for MainPage-->
    <TextView
        android:id="@+id/textViewTitleMainPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="casual"
        android:text="@string/title"
        android:textColor="@color/Coral"
        android:textSize="@android:dimen/app_icon_size"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Button for link to Register Activity-->
    <Button
        android:id="@+id/buttonRegisterPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_design"
        android:text="@string/register"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonLoginPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--Button for Login-->
    <Button
        android:id="@+id/buttonLoginPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:background="@drawable/button_design"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <!--Linear Layout for Login-->
    <LinearLayout
        android:id="@+id/linearLayoutLoginForm"
        android:layout_width="306dp"
        android:layout_height="138dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegisterPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleMainPage">

        <!--EditText for Email-->
        <EditText
            android:id="@+id/editTextEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/email_icon_foreground"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/Grey"
            android:textColorHint="@color/Grey" />

        <!--EditText for Password-->
        <EditText
            android:id="@+id/editTextPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/icon_password_foreground"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/Grey"
            android:textColorHint="@color/Grey" />
    </LinearLayout>

    <!--Progress bar for Login process-->
    <ProgressBar
        android:id="@+id/progressBarLogin"
        style="?android:attr/progressBarStyle"
        android:layout_width="181dp"
        android:layout_height="210dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="@color/colorAccent"/>

</androidx.constraintlayout.widget.ConstraintLayout>